# modbus-wind

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml
apps/: sen0658_poll.cpp
include/sen0658/: crc16.hpp  modbus_rtu.hpp  sen0658.hpp  serial_port.hpp
package/openwrt/sen0658-pc/: Makefile
scripts/: openwrt-build-package.sh  openwrt-index-packages.sh
src/: crc16.cpp  modbus_rtu.cpp  sen0658.cpp  serial_port_posix.cpp  serial_port_win32.cpp
